Got date sorting working, resized sq patches

--- a/generic.html
+++ b/generic.html
@@ -1,8 +1,4 @@
-﻿<!--
-TODO:
--Add progress bar for processing? http://devdocs.io/html/element/progress
--->
-<!doctype html>
+﻿<!doctype html>
 <html lang="en-US">
 
 <head>
