--- a/jstester.html
+++ b/jstester.html
@@ -12,36 +12,7 @@
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
     crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/qunit/qunit-2.1.1.js"></script>
-  <script src="parser.js"></script>
-  <script>
-    QUnit.test( "monthAbbrToNum(input, [isZeroSubscript = false])", (assert) => {
-      assert.deepEqual(monthAbbrToNum("JAN"),1,"monthAbbrToNum(\"JAN\") = 1");
-      assert.deepEqual(monthAbbrToNum("feb"),2,"monthAbbrToNum(\"feb\") = 2");
-      assert.deepEqual(monthAbbrToNum("MAR", false),3,"monthAbbrToNum(\"MAR\", false) = 3");
-      assert.deepEqual(monthAbbrToNum("ApR", false),4,"monthAbbrToNum(\"ApR\", false) = 4");
-      assert.deepEqual(monthAbbrToNum("MAY", true),4,"monthAbbrToNum(\"MAY\", true) = 4");
-      assert.deepEqual(monthAbbrToNum(" jun ", true),5,"monthAbbrToNum(\" jun \", true) = 5");
-      assert.deepEqual(monthAbbrToNum("\tjune\t", true),5,"monthAbbrToNum(\"\tjune\t\", true) = 5");
-      assert.deepEqual(monthAbbrToNum("july", false),7,"monthAbbrToNum(\"july\", false) = 7");
-      assert.deepEqual(monthAbbrToNum("somejibberishnotmonthname"),-1,"monthAbbrToNum(\"somejibberishnotmonthname\") = -1");
-      assert.deepEqual(monthAbbrToNum(6974),-1,"monthAbbrToNum(6974) = -1");
-      assert.deepEqual(monthAbbrToNum(null),-1,"monthAbbrToNum(null) = -1");
-      assert.deepEqual(monthAbbrToNum(undefined),-1,"monthAbbrToNum(undefined) = -1");
-      assert.deepEqual(monthAbbrToNum(true),-1,"monthAbbrToNum(true) = -1");
-    });
-    QUnit.test("numToMonAbbr(input, [isZeroSubscript = false])", (assert)=>{
-      assert.deepEqual(numToMonAbbr(0),"JAN","numToMonAbbr(0) = \"JAN\"");
-      assert.deepEqual(numToMonAbbr(1),"JAN","numToMonAbbr(1) = \"JAN\"");
-      assert.deepEqual(numToMonAbbr("1"),"JAN","numToMonAbbr(\"1\") = \"JAN\"");
-      assert.deepEqual(numToMonAbbr(1, false),"JAN","numToMonAbbr(1, false) = \"JAN\"");
-      assert.deepEqual(numToMonAbbr(1, true),"FEB","numToMonAbbr(1, true) = \"FEB\"");
-      assert.deepEqual(numToMonAbbr(6.9),"JUL","numToMonAbbr(6.9) = \"JUL\"");
-      assert.deepEqual(numToMonAbbr("6.9"),"JUL","numToMonAbbr(\"6.9\") = \"JUL\"");
-      assert.deepEqual(numToMonAbbr(null),null,"numToMonAbbr(null) = null");
-      assert.deepEqual(numToMonAbbr(true),null,"numToMonAbbr(true) = null");
-      assert.deepEqual(numToMonAbbr(undefined),null,"numToMonAbbr(undefined) = null");
-      assert.deepEqual(numToMonAbbr(-5),null,"numToMonAbbr(-5) = null");
-    });
-  </script>
+  <script src="/scripts/parser.js"></script>
+  <script src="/scripts/unitTests.js"></script>
 </body>
 </html>
