--- a/jstester.html
+++ b/jstester.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>parser.js testing</title>
-  <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.1.1.css">
-</head>
+  <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-git.css"> </head>
+
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <div id="fileInput"></div>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
     crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/qunit/qunit-2.1.1.js"></script>
-  <script src="/scripts/parser.js"></script>
-  <script src="/scripts/unitTests.js"></script>
+    <script src="https://code.jquery.com/qunit/qunit-git.js"></script>
+    <script src="scripts/parser.js"></script>
+    <script src="scripts/unitTests.js"></script>
+    <script>
+</script>
 </body>
+
 </html>
